handlers: impl /api/banchmark
